# movado

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml
movado_tests/movado_debug/: controller_exact.csv  controller_learn_time_mab_voting2.csv  controller_learn_time_mab_voting80.csv  controller_mab_voting2.csv  controller_mab_voting80.csv  design_space_exact.csv  design_space_mab_voting2.csv  design_space_mab_voting80.csv  exec_time_exact  exec_time_mab_voting80  objective_space_exact.csv  objective_space_mab_voting2.csv  objective_space_mab_voting80.csv
resources/: cats_sin_100.csv  cb_sin_100.csv  mab_controller_calls.csv  mab_distance_controller_sin_100.csv  mean_distance_controller_sin_100.csv
src/: controller.py  distance_controller.py  hoeffding_adaptive_tree_chained_estimator.py  hoeffding_adaptive_tree_estimator.py  hoeffding_adaptive_tree_list_estimator.py  mab_controller.py  mab_handler.py  mab_handler_cats.py  mab_handler_cb.py
src/movado/: __init__.py  chained_estimator.py  controller.py  distanceController.py  distance_controller.py  ensemble_accuracies_enum.py  estimator.py  hoeffding_adaptive_tree_chained_estimator.py  hoeffding_adaptive_tree_estimator.py  hoeffding_adaptive_tree_list_estimator.py  hoeffding_adaptive_tree_model.py  kernel_regression_model.py  mab_controller.py  mab_handler.py  mab_handler_cats.py  mab_handler_cb.py  mab_implementations_enum.py  meta_controller.py  model.py  movado.py  movado_static.py  multi_step_controller.py  scalers_enum.py  shadow_controller.py  splitters_enum.py  (+2 more)
tests/: test_krr.py  test_movado.py
(+5 files in other folders)
