[tool.poetry]
name = "Movado"
version = "0.6.3"
description =  "Approximation utility for expensive fitness functions"
authors = ["Daniele Paletti <danielepaletti98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19"
scipy = "^1.5.4"
vowpalwabbit = "^8.9.0"
river = "^0.7.0"
plotly = "^4.14.3"
scikit-learn = "^0.24.2"
joblib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
