[tool.poetry]
name = "Movado"
version = "0.7.2"
description =  "Approximation utility for expensive fitness functions"
authors = ["Daniele Paletti <danielepaletti98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19"
scipy = "^1.5"
vowpalwabbit = "^8"
river = "0.14"
plotly = "^4.14"
scikit-learn = "^0.24"
joblib = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
